Fix z-index for header

--- a/zarurat/style.css
+++ b/zarurat/style.css
@@ -159,6 +159,7 @@ body {
 #top {
 	display: none;
 	position: fixed;
+	z-index: 10;
 	top: 0;
 	margin: 0;
 	padding: 6px 13px;
